Locale update: es-ES

--- a/extension/locale/es-ES/cookies.properties
+++ b/extension/locale/es-ES/cookies.properties
@@ -148,32 +148,32 @@ cookies.host.reject=Rechazar cookies de %S
 cookies.edit.invalidname=Nombre de la cookie no válido.
 cookies.edit.invalidhost=Servidor de la cookie no válido.
 cookies.edit.invalidpath=Ruta de la cookie no válida.
-# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.domain,
-# cookies.header.size, cookies.header.path, cookies.header.expires,
+# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.rawValue,
+# cookies.header.domain, cookies.header.size, cookies.header.path, cookies.header.expires,
 # cookies.header.security, cookies.header.status, cookies.header.httponly):
 # Column labels used in the cookie header.
 cookies.header.name=Nombre
 cookies.header.value=Valor
+cookies.header.rawValue=Valor sin tratar
 cookies.header.domain=Dominio
 cookies.header.size=Tamaño
 cookies.header.path=Ruta
 cookies.header.expires=Expira
 cookies.header.security=Seguridad
-cookies.header.status=Estado
 cookies.header.httponly=HttpOnly
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
-# cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
-# cookies.header.expires.tooltip, cookies.header.security.tooltip,
-# cookies.header.status.tooltip, cookies.header.httponly.tooltip):
+# cookies.header.rawValue.tooltip, cookies.header.domain.tooltip, cookies.header.size.tooltip,
+# cookies.header.path.tooltip, cookies.header.expires.tooltip, cookies.header.security.tooltip,
+# cookies.header.httponly.tooltip):
 # Column tooltips used in the cookie header.
 cookies.header.name.tooltip=Nombre de la cookie
 cookies.header.value.tooltip=Valor guardado de la cookie
+cookies.header.rawValue.tooltip=Valor sin tratar almacenado en la cookie
 cookies.header.domain.tooltip=Dominio que ha almacenado la cookie
 cookies.header.size.tooltip=Tamaño de la cookie almacenada
 cookies.header.path.tooltip=Ruta de la carpeta donde está activa la cookie
 cookies.header.expires.tooltip=Fecha de expiración de la cookie
 cookies.header.security.tooltip=Muestra si es una cookie segura o no
-cookies.header.status.tooltip=Estado de la cookie (marcada, revertida, etc)
 cookies.header.httponly.tooltip=Muestra si la cookie es sólo HTTP
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
 # Labels used in the Firebug's net panel. If there are any cookies associated with a network
@@ -247,7 +247,7 @@ cookies.filter.showRejectedCookiesTooltip=Mostrar en la lista también las cooki
 # LOCALIZATION NOTE (cookies.edit.title, cookies.edit.name.label,
 # cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
 # cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
-# cookies.edit.session.label): Edit Cookie dialog UI
+# cookies.edit.session.label, cookies.edit.urlEncode.label): Edit Cookie dialog UI
 cookies.edit.title=Editar cookie
 cookies.edit.name.label=Nombre:
 cookies.edit.domain.label=Servidor:
@@ -257,6 +257,7 @@ cookies.edit.value.label=Valor:
 cookies.edit.secure.label=Cookie segura
 cookies.edit.httponly.label=Sólo HTTP
 cookies.edit.session.label=Sesión
+cookies.edit.urlEncode.label=Valor codificación URL
 # LOCALIZATION NOTE (cookies.console.Cookies, cookies.console.Filter_By_Cookies)
 # Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
 cookies.console.Cookies=Cookies
