--- a/extension/locale/es-ES/firebug.properties
+++ b/extension/locale/es-ES/firebug.properties
@@ -40,11 +40,15 @@ firebug.AttachFirebug=Fijar Firebug en la ventana del navegador
 pluralRule=1
 # LOCALIZATION NOTE (plural.Total_Firebugs2): Semicolon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-# Used in a tooltip that is displayed for the Firebug icon located within Firefox status bar.
+# Used in a tooltip that is displayed for the Firebug icon located within Firefox toolbar.
 # Displays the number of pages with Firebug activated.
 # %1 = number of Firebug instances activated
 # example: 2 Total Firebugs
 plural.Total_Firebugs2=%1$S Firebug total;%1$S Firebugs totales
+# LOCALIZATION NOTE (startbutton.tip.deactivated):
+# Used in a tooltip that is displayed for the Firebug icon located within Firefox toolbar.
+# Displays the deactivated status of Firebug
+startbutton.tip.deactivated=Desactivado
 # LOCALIZATION NOTE (panel.status): Label showing the status of an activable panel
 # inside a tooltip when hovering the Start Button. Will be shown for each panel.
 # first %S = panel name
@@ -159,8 +163,6 @@ html.option.Show_Entities_As_Names=Mostrar entidades como nombres
 html.option.tip.Show_Entities_As_Names=Mostrar todas las entidades XMl mediante sus nombres
 html.option.Show_Entities_As_Unicode=Mostrar entidades como Unicode
 html.option.tip.Show_Entities_As_Unicode=Mostrar todas las entidades XML mediante su representación Unicode
-ShowTextNodesWithEntities=Mostrar entidades básicas
-html.option.tip.Show_Text_Nodes_With_Entities=Mostrar los caracteres especiales más usuales como entidades
 # LOCALIZATION NOTE (html.option.Highlight_Mutations, html.option.tip.Highlight_Mutations):
 # HTML panel option (located in tab's option menu). If set to true, changes to the nodes
 # will be highlighted
@@ -258,6 +260,8 @@ css.EmptyStyleSheet=No hay reglas. Puede <a>crear una regla</a>.
 css.EmptyElementCSS=Este elemento no tiene reglas de estilo. Puede <a>crear una regla</a> para él.
 EditStyle=Editar estilo del elemento…
 style.tip.Edit_Style=Editar los estilos internos del elemento
+AddRule=Añadir regla…
+css.tip.AddRule=Añadir una regla genérica para este elemento
 NewRule=Nueva regla…
 css.tip.New_Rule=Añadir una nueva regla
 # LOCALIZATION NOTE (css.Delete_Rule, css.tip.Delete_Rule): Menu item label used in the CSS panel context menu.
@@ -580,6 +584,10 @@ RequestHeaders=Encabezados de solicitud
 ResponseHeaders=Encabezados de respuesta
 CachedResponseHeaders=Encabezados de respuesta de la caché
 PostRequestHeaders=Encabezados de respuesta de datos enviados
+# LOCALIZATION NOTE (net.label.ResponseHeadersFromBFCache):
+# Label (noun) used in the Net panel and displayed instead of Response Headers
+# if the response comes directly from the cache (BFCache).
+net.label.ResponseHeadersFromBFCache=La solicitud se resolvió directamente desde la caché, así que no tenemos respuesta del servidor. Vea a continuación la respuesta de caché.
 # LOCALIZATION NOTE (plural.Limit_Exceeded2): Semicolon list of plural forms.
 # A message displayed in the Net panel when some entries must be removed in the case the maximum number
 # of entries has been reached.
@@ -1383,3 +1391,9 @@ firebug.Memory_Profiler_Results=Resultados del analizador de memoria
 # LOCALIZATION NOTE (firebug.Entire_Session):
 # Label used within memory profiler results to mark summary information for entire session.
 firebug.Entire_Session=Toda la sesión
+# LOCALIZATION NOTE (console.msg.nothing_to_output):
+# Used by the console panel if a Console API is used without any argument.
+console.msg.nothing_to_output=(nada que mostrar)
+# LOCALIZATION NOTE (console.msg.nothing_to_output):
+# Used by the console panel if an empty string is passed into a Console API.
+console.msg.an_empty_string=(cadena vacía)
