Issue 3663: 	too much recursion when logging array contains itself

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1565,6 +1565,10 @@ firebug.dom.noChildren2=There are no child objects
 # more elements then displayed on the screen. "..." is automatically appended.
 firebug.reps.more=more
 
+# LOCALIZATION NOTE (firebug.reps.reference): Label shown when the displayed array/list has
+# a reference to itself (a cycle).
+firebug.reps.reference=Cycle reference detected
+
 # LOCALIZATION NOTE (firebug.storage.totalItems): Semicolon list of plural forms.
 # Label used in the DOM panel for local/session/global storage.
 # It's informing the user about the number of items in the storage.
