Issue 5142: 	Add help for console API to Command Line

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1,4 +1,4 @@
-Firebug=Firebug
+=Firebug
 
 # LOCALIZATION NOTE (WindowTitle): Title of detached Firebug window.
 # %S = Title of the associated web page.
@@ -1626,3 +1626,33 @@ console.msg.an_empty_string=(an empty string)
 cookies.legacy.firecookie_detected=Firecookie add-on is detected. This add-on has been integrated with Firebug 1.10 by default. To avoid a collision you need to uninstall Firecookie. \n\nYou must restart to finish uninstalling the add-on.
 cookies.legacy.uninstall=Uninstall
 cookies.legacy.uninstall_and_restart=Uninstall && Restart
+
+# LOCALIZATION NOTE (firebug.cmd.help.values, console.cmd.help_title_desc):
+console.cmd.help_title=Command Line API
+console.cmd.help_title_desc=Press F1 to open online Firebug help
+
+# LOCALIZATION NOTE (console.cmd.help.$): Description for Command Line API that is logged
+# in the the Console panel if the user types "help" into the command line.
+console.cmd.help.$=Returns a single element with the given id.
+console.cmd.help.$$=Returns an array of elements that match the given CSS selector.
+console.cmd.help.$x=Returns an array of elements that match the given XPath expression.
+console.cmd.help.dir=Prints an interactive listing of all properties of the object. This looks identical to the view that you would see in the DOM tab.
+console.cmd.help.dirxml=Prints the XML source tree of an HTML or XML element. This looks identical to the view that you would see in the HTML tab. You can click on any node to inspect it in the HTML tab.
+console.cmd.help.cd=By default, command line expressions are relative to the top-level window of the page. cd() allows you to use the window of a frame in the page instead.
+console.cmd.help.clear=Clears the console.
+console.cmd.help.inspect=Inspects an object in the most suitable tab, or the tab identified by the optional argument tabName. The available tab names are "html", "css", "script", and "dom".
+console.cmd.help.keys=Returns an array containing the names of all properties of the object.
+console.cmd.help.values=Returns an array containing the values of all properties of the object.
+console.cmd.help.debug=Adds a breakpoint on the first line of a function.
+console.cmd.help.undebug=Removes the breakpoint on the first line of a function.
+console.cmd.help.monitor=Turns on logging for all calls to a function.
+console.cmd.help.unmonitor=Turns off logging for all calls to a function.
+console.cmd.help.monitorEvents=Turns on logging for all events dispatched to an object. The optional argument types may specify a specific family of events to log. The most commonly used values for types are "mouse" and "key".
+console.cmd.help.unmonitorEvents=Turns off logging for all events dispatched to an object.
+console.cmd.help.profile=Turns on the JavaScript profiler. The optional argument title would contain the text to be printed in the header of the profile report.
+console.cmd.help.profileEnd=Turns off the JavaScript profiler and prints its report.
+console.cmd.help.table=Allows to log provided data using tabular layout. The method takes one required parameter that represents table like data (array of arrays or list of objects). The other optional parameter can be used to specify columns and/or properties to be logged.
+console.cmd.help.$0=The currently-selected object in the inspector.
+console.cmd.help.$1=The currently-selected object in the inspector.
+console.cmd.help.$n=Access to an array of last 5 inspected elements. 
+console.cmd.help.help=Displays help for all available commands.
