--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1,4 +1,4 @@
-=Firebug
+Firebug=Firebug
 
 # LOCALIZATION NOTE (WindowTitle): Title of detached Firebug window.
 # %S = Title of the associated web page.
