Improved description of Command Line API help

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1636,23 +1636,24 @@ console.cmd.help_title_desc=Press F1 to open online Firebug help
 console.cmd.help.$=Returns a single element with the given id.
 console.cmd.help.$$=Returns an array of elements that match the given CSS selector.
 console.cmd.help.$x=Returns an array of elements that match the given XPath expression.
-console.cmd.help.dir=Prints an interactive listing of all properties of the object. This looks identical to the view that you would see in the DOM tab.
-console.cmd.help.dirxml=Prints the XML source tree of an HTML or XML element. This looks identical to the view that you would see in the HTML tab. You can click on any node to inspect it in the HTML tab.
+console.cmd.help.dir=Prints an interactive listing of all properties of the object. This looks identical to the view inside the DOM panel.
+console.cmd.help.dirxml=Prints the XML source tree of an HTML or XML element. This looks identical to the view inside the HTML panel. You can click on any node to inspect it in the HTML panel.
 console.cmd.help.cd=By default, command line expressions are relative to the top-level window of the page. cd() allows you to use the window of a frame in the page instead.
 console.cmd.help.clear=Clears the console.
-console.cmd.help.inspect=Inspects an object in the most suitable tab, or the tab identified by the optional argument tabName. The available tab names are "html", "css", "script", and "dom".
+console.cmd.help.copy=Copies the given parameter to the clipboard. This can be a return value of a function or an object.
+console.cmd.help.inspect=Inspects an object in the most suitable panel, or the panel identified by the optional second argument. The available panel names are "html", "stylesheet", "script", and "dom".
 console.cmd.help.keys=Returns an array containing the names of all properties of the object.
 console.cmd.help.values=Returns an array containing the values of all properties of the object.
 console.cmd.help.debug=Adds a breakpoint on the first line of a function.
 console.cmd.help.undebug=Removes the breakpoint on the first line of a function.
 console.cmd.help.monitor=Turns on logging for all calls to a function.
 console.cmd.help.unmonitor=Turns off logging for all calls to a function.
-console.cmd.help.monitorEvents=Turns on logging for all events dispatched to an object. The optional argument types may specify a specific family of events to log. The most commonly used values for types are "mouse" and "key".
-console.cmd.help.unmonitorEvents=Turns off logging for all events dispatched to an object.
-console.cmd.help.profile=Turns on the JavaScript profiler. The optional argument title would contain the text to be printed in the header of the profile report.
+console.cmd.help.monitorEvents=Turns on logging for all events dispatched to an object. The optional second argument may define specific events or event types to log. The available event types are "composition", "contextmenu", "drag", "focus", "form", "key", "load", "mouse", "mutation", "paint", "scroll", "text", "ui", "xul", and "clipboard".
+console.cmd.help.unmonitorEvents=Turns off logging for all events dispatched to an object. The optional second argument may define specific events or event families, for which to turn logging off.
+console.cmd.help.profile=Turns on the JavaScript profiler. The optional second argument contains the text to be printed in the header of the profile report.
 console.cmd.help.profileEnd=Turns off the JavaScript profiler and prints its report.
-console.cmd.help.table=Allows to log provided data using tabular layout. The method takes one required parameter that represents table like data (array of arrays or list of objects). The other optional parameter can be used to specify columns and/or properties to be logged.
-console.cmd.help.$0=The currently-selected object in the inspector.
-console.cmd.help.$1=The currently-selected object in the inspector.
-console.cmd.help.$n=Access to an array of last 5 inspected elements. 
+console.cmd.help.table=Allows to log provided data using tabular layout. The method takes one required parameter that represents table-like data (array of arrays or list of objects). The optional second parameter can be used to specify columns and/or properties to be logged.
+console.cmd.help.$0=Represents the last element selected via the Inspector.
+console.cmd.help.$1=Represents the second last element selected via the Inspector.
+console.cmd.help.$n=Returns one of the 5 last elements selected via the Inspector. This method takes one required parameter, which represents the index of the element (starting at 0).
 console.cmd.help.help=Displays help for all available commands.
