Locale update: el

--- a/extension/locale/el/firebug-tracing.properties
+++ b/extension/locale/el/firebug-tracing.properties
@@ -1,8 +1,8 @@
-# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):nn
-# Firebug tracing console menu items (located in Firebug's menu).nn
+# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):n\n
+# Firebug tracing console menu items (located in Firebug\'s menu).n\n
 Open_Firebug_Tracing=Άνοιγμα ανίχνευσης Firebug
 Always_Open_Firebug_Tracing=Πάντα άνοιγμα ανίχνευσης Firebug
-# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).nn
+# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).n\n
 title.Tracing=Ανίχνευση
 tracing.Show_Scope_Variables=Εμφάνιση εμβέλειας μεταβλητών
 tracing.Show_Time=Εμφάνιση ώρας
