--- a/extension/locale/nl/firebug-tracing.properties
+++ b/extension/locale/nl/firebug-tracing.properties
@@ -1,5 +1,5 @@
 # LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):
-# Firebug tracing console menu items (located in Firebug\'s menu).
+# Firebug tracing console menu items (located in Firebug's menu).
 Open_Firebug_Tracing=Firebug Volgen openen
 Always_Open_Firebug_Tracing=Firebug Volgen altijd openen
 # LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).
