--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -775,6 +775,8 @@ html.tip.Copy_CSS_Path=Copy the element's CSS path to the clipboard
 CopyLocation=Copy Location
 clipboard.tip.Copy_Location=Copy the URL of the object's location to the clipboard
 
+CopyRequestParameters = Copy Request Parameters
+net.tip.Copy_Request_Parameters = Copy the request parameters to the clipboard
 CopyLocationParameters=Copy Location with Parameters
 net.tip.Copy_Location_Parameters=Copy the URL incl. the parameters to the clipboard
 CopyRequestHeaders=Copy Request Headers
