Added the option of copying URL/POST Parameters to the clipboard

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -775,8 +775,10 @@ html.tip.Copy_CSS_Path=Copy the element's CSS path to the clipboard
 CopyLocation=Copy Location
 clipboard.tip.Copy_Location=Copy the URL of the object's location to the clipboard
 
-CopyRequestParameters=Copy Request Parameters
-net.tip.Copy_Request_Parameters=Copy Request parameters to the clipboard
+CopyURLParameters=Copy URL Parameters
+net.tip.Copy_URL_Parameters=Copy URL parameters to the clipboard
+CopyPOSTParameters=Copy POST Parameters
+net.tip.Copy_POST_Parameters=Copy POST parameters to the clipboard
 CopyLocationParameters=Copy Location with Parameters
 net.tip.Copy_Location_Parameters=Copy the URL incl. the parameters to the clipboard
 CopyRequestHeaders=Copy Request Headers
