Replaced FAQ translation by "help" (related to issue 5590)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1111,8 +1111,8 @@ firebug.NormalTextSize=Normal Text Size
 firebug.menu.tip.Normal_Text_Size=Reset the text size used in Firebug to the default
 firebug.Website=Firebug Website...
 firebug.menu.tip.Website=Open the official Firebug website
-firebug.FAQ=FAQ...
-firebug.menu.tip.FAQ=Open the page answering the frequently asked questions
+firebug.help=Help...
+firebug.menu.tip.help=Open the page with links to pages explaining Firebug
 firebug.Documentation=Documentation...
 firebug.menu.tip.Documentation=Open the documentation about Firebug
 firebug.KeyShortcuts=Keyboard Shortcuts...
