Added l10n for panel activation status

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -68,6 +68,7 @@ minimized=Minimized
 enablement.for_all_pages=for all pages
 enablement.on=On
 enablement.off=Off
+enablement.Panel_activation_status=Panel activation status:
 none=Closed
 Firebug_-_inactive_for_current_website=Firebug - inactive for current website
 Activate_Firebug_for_the_current_website=Activate Firebug for the current website
