Issue 5539: 	New option in the Console panel: Show Cookie Events

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -10,11 +10,11 @@ cookies.Session=Session
 cookies.AllowGlobally=Accept Cookies From Sites
 cookies.tip.AllowGlobally=Accept all cookies by default or block all cookies by default
 
-# LOCALIZATION NOTE (cookies.LogEvents, cookies.tip.LogEvents):
+# LOCALIZATION NOTE (cookies.showCookieEvents, cookies.tip.showCookieEvents):
 # Label used in Cookies panel options menu (the small arrow next to the Cookies panel label).
 # If checked, various cookies events are displayed in Firebug's Console panel.
-cookies.LogEvents=Show Logs in Console
-cookies.tip.LogEvents=Use to display various cookie events (changed, deleted) in the Console panel
+cookies.showCookieEvents=Show Cookie Events
+cookies.tip.showCookieEvents=Log cookie events (changed, deleted) into the console
 
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
