Locale update: de

--- a/extension/locale/de/cookies.properties
+++ b/extension/locale/de/cookies.properties
@@ -10,8 +10,8 @@ cookies.tip.AllowGlobally=Standardmäßig alle Cookies akzeptieren / verweigern
 # LOCALIZATION NOTE (cookies.AllowGlobally): Label used for cookies permission.
 # LOCALIZATION NOTE (cookies.LogEvents): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, various cookies events are
-cookies.LogEvents=Log-Daten in der Konsole anzeigen
-cookies.tip.LogEvents=Erlaubt es, verschiedene Cookie Ereignisse (geändert, gelöscht) im Konsole Panel anzuzeigen
+cookies.showCookieEvents=Cookie Ereignisse anzeigen
+cookies.tip.showCookieEvents=Cookie Ereignisse (hinzugefügt, geändert, gelöscht) in der Konsole protokollieren
 # displayed in Firebug's Console panel.
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
