--- a/extension/locale/de/firebug.properties
+++ b/extension/locale/de/firebug.properties
@@ -60,6 +60,7 @@ minimized=Minimiert
 enablement.for_all_pages=für alle Seiten
 enablement.on=An
 enablement.off=Aus
+enablement.Panel_activation_status=Panel Aktivierungsstatus:
 none=Geschlossen
 Firebug_-_inactive_for_current_website=Firebug - inaktiv für die aktuelle Webseite
 Activate_Firebug_for_the_current_website=Firebug für die aktuelle Webseite aktivieren
@@ -660,6 +661,10 @@ html.tip.Copy_CSS_Path=Den CSS-Pfad des Elements in die Zwischenablage kopieren
 # panel when clicking an error object.
 CopyLocation=Adresse kopieren
 clipboard.tip.Copy_Location=Den URL der Objektquelle in die Zwischenablage kopieren
+CopyURLParameters=URL-Parameter kopieren
+net.tip.Copy_URL_Parameters=URL-Parameter in die Zwischenablage kopieren
+CopyPOSTParameters=POST-Parameter kopieren
+net.tip.Copy_POST_Parameters=POST-Parameter in die Zwischenablage kopieren
 CopyLocationParameters=Adresse mit Parametern kopieren
 net.tip.Copy_Location_Parameters=Den URL inkl. Parametern in die Zwischenablage kopieren
 CopyRequestHeaders=Anfrage-Header kopieren
@@ -946,8 +951,8 @@ firebug.NormalTextSize=Normale Schriftgröße
 firebug.menu.tip.Normal_Text_Size=Textgröße, die in Firebug benutzt wird, auf den Standard zurücksetzen
 firebug.Website=Firebug-Website…
 firebug.menu.tip.Website=Offizielle Firebug Webseite öffnen
-firebug.FAQ=Häufig gestellte Fragen…
-firebug.menu.tip.FAQ=Die Seite mit häufig gestellten Fragen öffnen
+firebug.help=Hilfe...
+firebug.menu.tip.help=Die Seite mit Links zu Firebug beschreibenden Seiten öffnen
 firebug.Documentation=Dokumentation…
 firebug.menu.tip.Documentation=Die Dokumentation zu Firebug öffnen
 firebug.KeyShortcuts=Tastaturkürzel…
@@ -1225,9 +1230,6 @@ script.suggestion.no_system_source_debugging=Firebug kann momentan nicht dazu be
 # The suggestion message represents an advice how to solve the problem.
 script.warning.no_javascript=Kein JavaScript auf dieser Seite
 script.suggestion.no_javascript2=Falls <script> Tags ein "type"-Attribut besitzen, sollte es "text/javascript" oder "application/javascript" entsprechen. Zudem müssen Skripts geparst werden können (syntaktisch korrekt sein).
-# LOCALIZATION NOTE (script.warning.no_chrome_debugging, script.suggestion.no_chrome_debugging):
-# Message displayed in the Script panel, if the page opened is accessed via a chrome URL.
-# The suggestion message represents an advice how to solve the problem.
 # LOCALIZATION NOTE (script.warning.debugger_active, script.suggestion.debugger_active):
 # Message displayed in the Script panel, if the page is opened in different tabs/windows and
 # the debugger is already halted at a breakpoint inside another tab/window.
@@ -1356,6 +1358,9 @@ firebug.dom.noChildren2=Es gibt keine Kindobjekte
 # LOCALIZATION NOTE (firebug.reps.more): Label shown when the displayed array/list has
 # more elements then displayed on the screen. "..." is automatically appended.
 firebug.reps.more=mehr
+# LOCALIZATION NOTE (firebug.reps.reference): Label shown when the displayed array/list has
+# a reference to itself (a cycle).
+firebug.reps.reference=Zyklische Referenz entdeckt
 # LOCALIZATION NOTE (firebug.storage.totalItems): Semicolon list of plural forms.
 # Label used in the DOM panel for local/session/global storage.
 # It's informing the user about the number of items in the storage.
@@ -1397,3 +1402,38 @@ console.msg.nothing_to_output=(keine Ausgabe)
 # LOCALIZATION NOTE (console.msg.nothing_to_output):
 # Used by the console panel if an empty string is passed into a Console API.
 console.msg.an_empty_string=(Leerstring)
+# LOCALIZATION NOTE (cookies.legacy.firecookie_detected, cookies.legacy.uninstall, cookies.legacy.uninstall_and_restart):
+# A message and labels used when Firecookie is detected. This extension has been integrated with
+# Firebu and should not be installed together with Firebug 1.10+
+cookies.legacy.firecookie_detected=Das Firecookie Add-on wurde erkannt. Dieses Add-on wurde in Firebug 1.10 standardmäßig integriert. Um Konflikte zuvermeiden, muss Firecookie deinstalliert werden.\n\nUm die Deinstallation des Add-ons abzuschließen, muss der Browser neugestartet werden.
+cookies.legacy.uninstall=Deinstallieren
+cookies.legacy.uninstall_and_restart=Deinstallieren und neustarten
+# LOCALIZATION NOTE (firebug.cmd.help.values, console.cmd.help_title_desc):
+console.cmd.help_title=Kommandozeilen API
+console.cmd.help_title_desc=F1 drücken, um die Firebug Onlinehilfe zu öffnen
+# LOCALIZATION NOTE (console.cmd.help.$): Description for Command Line API that is logged
+# in the the Console panel if the user types "help" into the command line.
+console.cmd.help.$=Gibt ein einzelnes Element mit der angegebenen ID zurück.
+console.cmd.help.$$=Gibt ein Array von Element zurück, die dem angegebenen CSS-Selektor entsprechen.
+console.cmd.help.$x=Gibt ein Array von Element zurück, die dem angegebenen XPath Ausdruck entsprechen.
+console.cmd.help.dir=Gibt eine interaktive Liste aller Eigenschaften eines Objekts aus. Diese sieht identisch zu der Ansicht im DOM Panel aus.
+console.cmd.help.dirxml=Gibt den XML Quelltextbaum eines HTML oder XML Elements aus. Dieser sieht identisch zu der Ansicht im HTML panel aus. Jeder Knoten kann angeklickt werden, um ihn im HTML Panel zu untersuchen.
+console.cmd.help.cd=Standardmäßig sind Kommandozeilenausdrücke relativ zum obersten 'window' der Seite. cd() erlaubt es, stattdessen das 'window' eines Frames innerhalb der Seite zu benutzen.
+console.cmd.help.clear=Leert die Konsole.
+console.cmd.help.copy=Kopiert den angegebenen Parameter in die Zwischenablage. Dies kann ein Rückgabewert einer Funktion oder ein Objekt sein.
+console.cmd.help.inspect=Untersucht ein Objekt im passendsten Panel oder dem Panel, das durch das optionale zweite Argument identifiziert wird. Die verfügbaren Panelnamen sind "html", "stylesheet", "script" und "dom".
+console.cmd.help.keys=Gibt ein Array zurück, das die Namen aller Eigenschaften eines Objekts beinhaltet.
+console.cmd.help.values=Gibt ein Array zurück, das die Werte aller Eigenschaften eines Objekts beinhaltet.
+console.cmd.help.debug=Fügt einen Haltepunkt an der ersten Zeile einer Funktion ein.
+console.cmd.help.undebug=Entfernt den Haltepunkt an der ersten Zeile einer Funktion.
+console.cmd.help.monitor=Schaltet die Protokollierung aller Aufrufe einer Funktion ein.
+console.cmd.help.unmonitor=Schaltet die Protokollierung aller Aufrufe einer Funktion aus.
+console.cmd.help.monitorEvents=Schaltet die Protokollierung aller Ereignisse ein, die an dieses Objekt gesendet werden. Das optionale zweite Argument definiert spezifische Ereignisse oder Ereignistypen. Die verfügbaren Ereignistypen sind "composition", "contextmenu", "drag", "focus", "form", "key", "load", "mouse", "mutation", "paint", "scroll", "text", "ui", "xul" und "clipboard".
+console.cmd.help.unmonitorEvents=Schaltet die Protokollierung aller Ereignisse aus, die an ein Objekt gesendet werden. Das optionale zweite Argument definiert spezifische Ereignisse oder Ereignistypen.
+console.cmd.help.profile=Schaltet den JavaScript Profiler ein. Das optionale zweite Argument gibt den Text an, der als Überschrift des Profilerberichts angezeigt wird.
+console.cmd.help.profileEnd=Schaltet den JavaScript Profiler aus und gibt den Bericht aus.
+console.cmd.help.table=Erlaubt es, gegebene Daten in tabellarischer Form zu protokollieren. Der Methode kann ein erforderliches Argument übergeben werden, der die tabellarischen Daten (Array von Arrays oder Liste von Objekten) darstellt. Das optionale zweite Argument kann dazu verwendet werden, die Spalten und/oder Eigenschaften anzugeben, die ausgegeben werden sollen.
+console.cmd.help.$0=Repräsentiert das zuletzt untersuchte Element.
+console.cmd.help.$1=Repräsentiert das vorletzte untersuchte Element.
+console.cmd.help.$n=Gibt eines der letzten 5 untersuchten Elemente zurück.
+console.cmd.help.help=Zeigt eine Hilfe für alle verfügbaren Befehle an.
