Update locale: ru

--- a/extension/locale/ru/cookies.properties
+++ b/extension/locale/ru/cookies.properties
@@ -7,11 +7,11 @@ cookies.Session=Сессия
 # Label used for cookies permission.
 cookies.AllowGlobally=Принимать Cookie от сайтов
 cookies.tip.AllowGlobally=Принимать все cookie по-умолчанию или отвергать все cookie
-# LOCALIZATION NOTE (cookies.LogEvents, cookies.tip.LogEvents):
+# LOCALIZATION NOTE (cookies.showCookieEvents, cookies.tip.showCookieEvents):
 # Label used in Cookies panel options menu (the small arrow next to the Cookies panel label).
 # If checked, various cookies events are displayed in Firebug's Console panel.
-cookies.LogEvents=Показывать логи в консоли
-cookies.tip.LogEvents=Используется для отображения разнообразных действий с cookie (изменение, удаление) в Консоли
+cookies.showCookieEvents=Показывать события Cookie
+cookies.tip.showCookieEvents=Записывать в консоль события cookie (изменения, удаления)
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
 # if the permission is changed to deny.
