Update locale: el

--- a/extension/locale/el/cookies.properties
+++ b/extension/locale/el/cookies.properties
@@ -7,11 +7,11 @@ cookies.Session=Συνεδρίας
 # Label used for cookies permission.
 cookies.AllowGlobally=Αποδοχή cookies από σελίδες
 cookies.tip.AllowGlobally=Επιτρέπει ή απαγορεύει την αποδοχή όλων των cookies σαν αρχική επιλογή
-# LOCALIZATION NOTE (cookies.LogEvents, cookies.tip.LogEvents):
+# LOCALIZATION NOTE (cookies.showCookieEvents, cookies.tip.showCookieEvents):
 # Label used in Cookies panel options menu (the small arrow next to the Cookies panel label).
 # If checked, various cookies events are displayed in Firebug's Console panel.
-cookies.LogEvents=Εμφάνιση καταγραφών στην κονσόλα
-cookies.tip.LogEvents=Χρησιμοποιείστε το για να εμφανίσετε διάφορα συμβάντα για cookies (μεταβολές, διαγραφές) στην κονσόλα.
+cookies.showCookieEvents=Εμφάνιση συμβάντων cookie
+cookies.tip.showCookieEvents=Καταγραφή στην κονσόλα των συμβάντων (μεταβολές διαγραφές) cookie.
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
 # if the permission is changed to deny.
